sol/2007_p2_f1_saco.txt
Sacoleiro
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,1 s
Limite de memória permitido 1.0 GB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2007f1p2_saco.cpp: In function ‘int solve()’:
2007f1p2_saco.cpp:20:15: error: ‘INT_MAX’ was not declared in this scope
   20 |     int ans = INT_MAX;
      |               ^~~~~~~
2007f1p2_saco.cpp:4:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
    3 | #include <queue>
  +++ |+#include <climits>
    4 |
